# my-multi-agent-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  deepseek-tool-calling-eval.md  design-decisions.md  getting-started.md
experiments/: deepseek_tool_eval.py  deepseek_tool_probe.md  deepseek_tool_probe.py
src/customer_service/: __init__.py  cli.py  demo.py  system.py
src/customer_service/agents/: __init__.py  complaint.py  faq.py  order.py
src/customer_service/core/: __init__.py  agent.py  fanout.py  llm.py  message.py  retriever.py  router.py  tools.py
src/customer_service/data/: __init__.py  faq.json  orders.json
src/customer_service/tools/: __init__.py  faq_tools.py  order_tools.py  refund_tools.py
tests/: _fakes.py  conftest.py  test_agent.py  test_agents.py  test_cli.py  test_entry.py  test_fanout.py  test_faq_tools.py  test_llm.py  test_message.py  test_order_tools.py  test_refund_tools.py  test_router.py  test_smoke.py  test_system.py  test_tools.py
