[project]
name = "customer-service"
version = "0.1.0"
description = "纯手写、不依赖任何 Agent 框架的 Multi-Agent 智能客服系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "helloworldtang" }]
keywords = ["multi-agent", "llm", "customer-service", "tool-calling", "react"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
# 依赖刻意精简：openai 是唯一"重"依赖；pydantic 兼做 tool args 校验与配置；
# rich 仅用于 CLI 体验。无任何 Agent 框架（LangChain/LangGraph/AutoGen 一概不引入）。
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "docstring-parser>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
customer-service = "customer_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
# 测试从 fixtures 注入 FakeLLM，绝不依赖真实网络与 API key
markers = [
    "live: 需要 DEEPSEEK_API_KEY 的真实调用测试（默认不选）",
]

[tool.coverage.run]
source = ["customer_service"]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W 风格、F pyflakes、I 导入排序、UP 现代语法、B bugbear、SIM 简化、C4 comprehension
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # 测试里长字符串可放宽

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["customer_service"]
